--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Yunfly <120562638@qq.com>",
+  "author": "youwatch",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
